@@ -32,9 +32,9 @@
 // Unittest for scanner, especially GetNextComments and GetComments()
 // functionality.
 
-#ifdef HAVE_CONFIG_H                         
+#ifdef HAVE_CONFIG_H
 #include <config.h>
-#endif                                                               
+#endif
 
 #include <stdio.h>
 #include <string>
