@@ -30,9 +30,9 @@
 // Author: wilsonh@google.com (Wilson Hsieh)
 //
 
-#ifdef HAVE_CONFIG_H                         
+#ifdef HAVE_CONFIG_H
 #include <config.h>
-#endif                                                               
+#endif
 
 #include <iostream>
 #include "pcrecpp_internal.h"
